[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/Tutorial_Block.gd" type="Script" id=1]

[node name="Tutorial_Block" type="Node2D"]
position = Vector2( 20, 0 )
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
self_modulate = Color( 0, 0, 0, 1 )
margin_right = 350.0
margin_bottom = 200.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextEdit" type="TextEdit" parent="."]
margin_left = 50.0
margin_top = 10.0
margin_right = 340.0
margin_bottom = 190.0
readonly = true
show_line_numbers = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
margin_left = -15.0
margin_top = 15.0
margin_right = 44.0
margin_bottom = 35.0
text = "Button"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Image" type="Button" parent="."]
margin_left = -15.0
margin_top = 45.0
margin_right = 44.0
margin_bottom = 65.0
text = "Image"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tools" type="Button" parent="."]
margin_left = -15.0
margin_top = 75.0
margin_right = 44.0
margin_bottom = 95.0
text = "Tools"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Motion" type="Button" parent="."]
margin_left = -15.0
margin_top = 165.0
margin_right = 44.0
margin_bottom = 185.0
text = ">>"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Close" type="Button" parent="."]
margin_left = -15.0
margin_top = 135.0
margin_right = 44.0
margin_bottom = 155.0
text = "X"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Image" to="." method="_on_Image_pressed"]
[connection signal="pressed" from="Tools" to="." method="_on_Tools_pressed"]
[connection signal="button_down" from="Motion" to="." method="_on_Motion_button_down"]
[connection signal="button_up" from="Motion" to="." method="_on_Motion_button_up"]
[connection signal="pressed" from="Close" to="." method="_on_Close_pressed"]
